yaw optimisation example done

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -90,8 +90,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-18T14:21:29.964225700Z",
-     "start_time": "2026-02-18T14:21:29.619958900Z"
+     "end_time": "2026-02-18T14:48:43.047857Z",
+     "start_time": "2026-02-18T14:48:42.762268Z"
     }
    },
    "cell_type": "code",
@@ -109,9 +109,9 @@
     "\n",
     "\n",
     "# Cartesian coordinates in metres\n",
-    "override_layout = False\n",
-    "layout_x = jnp.array([0.0, 500.0, 1000.0], dtype=DTYPE)\n",
-    "layout_y = jnp.array([0.0, 500.0, 1000.0], dtype=DTYPE)\n",
+    "override_layout = True\n",
+    "layout_x = jnp.array([0.0, 400.0, 800.0], dtype=DTYPE)\n",
+    "layout_y = jnp.array([0.0, 0.0, 0.0], dtype=DTYPE)\n",
     "\n",
     "# Inflow speed in m/s\n",
     "wind_speed = jnp.array([13.5], dtype=DTYPE)\n",
@@ -154,57 +154,8 @@
     "gch_farm_power = gch_sim.get_farm_power()\n"
    ],
    "id": "476bf48af3f5bfde",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "v_wake after zeros:  (1, 3, 3, 3)\n",
-      "w_wake after zeros:  (1, 3, 3, 3)\n",
-      "v_wake after transverse velocities:  (1, 3, 3, 3)\n",
-      "w_wake after transverse velocities:  (1, 3, 3, 3)\n",
-      "u_i shape: (1, 1, 3, 3)\n",
-      "v_i shape: (1, 1, 3, 3)\n",
-      "ti_i shape: (1, 1, 3, 3)\n",
-      "w_i shape: (1, 1, 3, 3)\n",
-      "v_wake_i shape: (1, 1, 3, 3)\n",
-      "w_wake_i shape: (1, 1, 3, 3)\n",
-      "I_mixing shape: (1, 1, 1, 1)\n",
-      "ti_i shape: (1, 1, 3, 3)\n",
-      "Updated shape: (1, 1, 3, 3)\n",
-      "TI shape: (1, 3, 3, 3)\n",
-      "v_wake after zeros:  (1, 3, 3, 3)\n",
-      "w_wake after zeros:  (1, 3, 3, 3)\n",
-      "v_wake after transverse velocities:  (1, 3, 3, 3)\n",
-      "w_wake after transverse velocities:  (1, 3, 3, 3)\n",
-      "u_i shape: (1, 1, 3, 3)\n",
-      "v_i shape: (1, 1, 3, 3)\n",
-      "ti_i shape: (1, 1, 3, 3)\n",
-      "w_i shape: (1, 1, 3, 3)\n",
-      "v_wake_i shape: (1, 1, 3, 3)\n",
-      "w_wake_i shape: (1, 1, 3, 3)\n",
-      "I_mixing shape: (1, 1, 1, 1)\n",
-      "ti_i shape: (1, 1, 3, 3)\n",
-      "Updated shape: (1, 1, 3, 3)\n",
-      "TI shape: (1, 3, 3, 3)\n",
-      "v_wake after zeros:  (1, 3, 3, 3)\n",
-      "w_wake after zeros:  (1, 3, 3, 3)\n",
-      "v_wake after transverse velocities:  (1, 3, 3, 3)\n",
-      "w_wake after transverse velocities:  (1, 3, 3, 3)\n",
-      "u_i shape: (1, 1, 3, 3)\n",
-      "v_i shape: (1, 1, 3, 3)\n",
-      "ti_i shape: (1, 1, 3, 3)\n",
-      "w_i shape: (1, 1, 3, 3)\n",
-      "v_wake_i shape: (1, 1, 3, 3)\n",
-      "w_wake_i shape: (1, 1, 3, 3)\n",
-      "I_mixing shape: (1, 1, 1, 1)\n",
-      "ti_i shape: (1, 1, 3, 3)\n",
-      "Updated shape: (1, 1, 3, 3)\n",
-      "TI shape: (1, 3, 3, 3)\n"
-     ]
-    }
-   ],
-   "execution_count": 9
+   "outputs": [],
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -215,8 +166,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-18T14:09:26.554742200Z",
-     "start_time": "2026-02-18T14:09:25.584039200Z"
+     "end_time": "2026-02-18T14:50:17.703754700Z",
+     "start_time": "2026-02-18T14:50:16.999298200Z"
     }
    },
    "cell_type": "code",
@@ -232,13 +183,19 @@
     "    turbulence_intensities=0.06,\n",
     ")\n",
     "\n",
-    "fmodel.set(wind_data=time_series)\n",
+    "if override_layout == False:\n",
+    "    fmodel.set(wind_data=time_series)\n",
+    "else:\n",
+    "    fmodel.set(wind_data=time_series, layout_x=np.array(layout_x), layout_y=np.array(layout_y))\n",
     "cc_start_time = time.time()\n",
     "fmodel.run()\n",
     "cc_end_time = time.time()\n",
     "\n",
     "\n",
-    "fmodel_gch.set(wind_data=time_series)\n",
+    "if override_layout == False:\n",
+    "    fmodel_gch.set(wind_data=time_series)\n",
+    "else:\n",
+    "    fmodel_gch.set(wind_data=time_series, layout_x=np.array(layout_x), layout_y=np.array(layout_y))\n",
     "gch_start_time = time.time()\n",
     "fmodel_gch.run()\n",
     "gch_end_time = time.time()\n",
@@ -274,26 +231,26 @@
      "output_type": "stream",
      "text": [
       "---------- DiffWake JAX Results ----------\n",
-      "Total farm power with GCH (MW): 142.646\n",
-      "Total farm power with CC (MW): 97.611\n",
+      "Total farm power with GCH (MW): 4.837\n",
+      "Total farm power with CC (MW): 4.398\n",
       "\n",
       "---------- FLORIS Results ----------\n",
-      "Total farm power with GCH (MW): 142.661\n",
-      "Total farm power with CC (MW): 97.540\n",
+      "Total farm power with GCH (MW): 4.837\n",
+      "Total farm power with CC (MW): 4.408\n",
       "\n",
       "---------- Differences ----------\n",
-      "Absolute farm power difference (GCH) = 0.010066%\n",
-      "Absolute farm power difference (CC) = 0.072627%\n"
+      "Absolute farm power difference (GCH) = 0.001686%\n",
+      "Absolute farm power difference (CC) = 0.222853%\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T11:43:59.266957400Z",
-     "start_time": "2026-02-17T11:43:59.001528400Z"
+     "end_time": "2026-02-18T14:50:20.859450900Z",
+     "start_time": "2026-02-18T14:50:20.684527700Z"
     }
    },
    "cell_type": "code",
@@ -313,16 +270,16 @@
      "output_type": "stream",
      "text": [
       "------------ FLORIS runtimes ------------\n",
-      "Cumulative-Curl: 0.2000s\n",
-      "Gauss-Curl Hybrid: 0.1136s\n",
+      "Cumulative-Curl: 0.0030s\n",
+      "Gauss-Curl Hybrid: 0.0029s\n",
       "\n",
       "------------ DiffWake runtimes ------------\n",
-      "Cumulative-Curl: 1.6728s\n",
-      "Gauss-Curl Hybrid: 1.2533s\n"
+      "Cumulative-Curl: 0.0436s\n",
+      "Gauss-Curl Hybrid: 0.0377s\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 14
   },
   {
    "metadata": {},
