--- a/yaw_testing.ipynb
+++ b/yaw_testing.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-17T15:45:27.048492200Z",
-     "start_time": "2026-02-17T15:45:26.916593300Z"
+     "end_time": "2026-02-18T14:54:00.759622900Z",
+     "start_time": "2026-02-18T14:54:00.608333400Z"
     }
    },
    "source": [
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T15:48:06.310520700Z",
-     "start_time": "2026-02-17T15:48:06.171531400Z"
+     "end_time": "2026-02-18T14:54:03.368786800Z",
+     "start_time": "2026-02-18T14:54:00.760622200Z"
     }
    },
    "cell_type": "code",
@@ -58,7 +58,7 @@
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -69,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T15:48:16.154477900Z",
-     "start_time": "2026-02-17T15:48:06.582242500Z"
+     "end_time": "2026-02-18T15:02:42.953577500Z",
+     "start_time": "2026-02-18T15:02:40.766731600Z"
     }
    },
    "cell_type": "code",
@@ -138,7 +138,8 @@
     "unyawed_hr1_farm_power = jnp.sum(unyawed_hr1_turbine_powers)/1e6\n",
     "\n",
     "# # --- Case: Yawed Farm ---\n",
-    "y1, y2, y3 = 35.0, 10.0, 0.0\n",
+    "# y1, y2, y3 = 12.12434997, 20.76370488, 16.03151927\n",
+    "y1, y2, y3 = 25.0, 20.0, 12.52128107\n",
     "yaw_angles_deg = jnp.array([[y1, y2, y3]], dtype=DTYPE) # Try steering wakes away from downstream turbines\n",
     "yaw_angles_rad = jnp.deg2rad(yaw_angles_deg)\n",
     "\n",
@@ -203,13 +204,13 @@
    ],
    "id": "116c16e5f490e8",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T15:48:16.894846300Z",
-     "start_time": "2026-02-17T15:48:16.439549900Z"
+     "end_time": "2026-02-18T15:02:43.143456600Z",
+     "start_time": "2026-02-18T15:02:42.954577300Z"
     }
    },
    "cell_type": "code",
@@ -256,18 +257,18 @@
       "----- FLORIS results -----\n",
       "Baseline farm power: 4.407514 MW\n",
       "Turbine powers: [1972125.6058977128, 1629458.9911843056, 805929.0592101549]\n",
-      "Yawed farm power: 4.668296 MW\n",
-      "Turbine powers: [1843010.5386453331, 1829368.9173399047, 995916.6654495547]\n",
+      "Yawed farm power: 4.728623 MW\n",
+      "Turbine powers: [1927223.0146313708, 1675366.1631976936, 1126033.3897246697]\n",
       "\n",
       "----- DiffWake results  -----\n",
       "Baseline farm power: 4.397713 MW\n",
       "Turbine powers: [1972125.6058977128, 1629458.988632352, 796127.9570391176]\n",
-      "Yawed farm power: 4.764871 MW\n",
-      "Turbine powers: [1843010.5386453327, 1829368.9166461218, 1092491.9407999178]\n",
+      "Yawed farm power: 4.818058 MW\n",
+      "Turbine powers: [1927223.0146313705, 1675366.1622101034, 1215469.2363452164]\n",
       "\n",
       "---------- Differences ----------\n",
       "Absolute baseline power difference (GCH) = 0.222868%\n",
-      "Absolute yawed power difference (GCH) = 2.026818%\n",
+      "Absolute yawed power difference (GCH) = 1.856263%\n",
       "====================================================================================================\n",
       "----- FLORIS results (Horns Rev 1)-----\n",
       "Baseline farm power: 97.540232 MW\n",
@@ -279,11 +280,11 @@
       "\n",
       "---------- Differences ----------\n",
       "Absolute baseline power difference (cc) = 0.072634%\n",
-      "Absolute yawed power difference (cc = 4.163879%\n"
+      "Absolute yawed power difference (cc) = 4.163879%\n"
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 9
   },
   {
    "metadata": {
