--- a/yaw_testing.ipynb
+++ b/yaw_testing.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-18T23:34:27.224313600Z",
-     "start_time": "2026-02-18T23:34:25.409967900Z"
+     "end_time": "2026-02-19T08:34:00.444610400Z",
+     "start_time": "2026-02-19T08:33:58.770106100Z"
     }
    },
    "source": [
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-19T00:24:26.918777200Z",
-     "start_time": "2026-02-19T00:24:26.693818Z"
+     "end_time": "2026-02-19T08:34:03.394169300Z",
+     "start_time": "2026-02-19T08:34:00.447610800Z"
     }
    },
    "cell_type": "code",
@@ -65,7 +65,34 @@
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-19T08:40:05.744477200Z",
+     "start_time": "2026-02-19T08:40:05.547288300Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x = jnp.deg2rad(25) - jnp.array([3, 6, 9])\n",
+    "x"
+   ],
+   "id": "9b404a3176a8493a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([-2.56366769, -5.56366769, -8.56366769], dtype=float64, weak_type=True)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   },
   {
    "metadata": {},
