new penalty function

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -6,19 +6,22 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-18T23:39:30.878521700Z",
-     "start_time": "2026-02-18T23:39:30.865492200Z"
+     "end_time": "2026-02-19T10:44:17.252260Z",
+     "start_time": "2026-02-19T10:44:17.225160Z"
     }
    },
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import jax.numpy as jnp\n",
+    "import jax\n",
     "import pickle\n",
+    "from dataclasses import dataclass\n",
     "\n",
     "plt.style.use('default')"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 17
   },
   {
    "metadata": {
@@ -280,6 +283,363 @@
     }
    ],
    "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-19T10:44:21.886508100Z",
+     "start_time": "2026-02-19T10:44:21.793327500Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# verify LHS sampling\n",
+    "def _latin_hypercube_unit(key, M: int, D: int, dtype) -> jax.Array:\n",
+    "    base = jnp.arange(M, dtype=jnp.int32)\n",
+    "    keys = jax.random.split(key, D + 1)\n",
+    "    k_jit, k_perms = keys[0], keys[1:]\n",
+    "    jitter = jax.random.uniform(k_jit, shape=(D, M), dtype=dtype)\n",
+    "\n",
+    "    def _perm_one(k):\n",
+    "        return jax.random.permutation(k, base)\n",
+    "\n",
+    "    perms = jax.vmap(_perm_one)(k_perms)\n",
+    "    U = (perms.astype(dtype) + jitter) / dtype(M)\n",
+    "    return U.T\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class YawConstraints:\n",
+    "    gamma_min: float  # minimum allowable yaw angle\n",
+    "    gamma_max: float  # maximum allowable yaw angle\n",
+    "\n",
+    "    def mins(self, dtype) -> jax.Array:\n",
+    "        return jnp.deg2rad(jnp.array([self.gamma_min], dtype=dtype))\n",
+    "\n",
+    "    def maxs(self, dtype) -> jax.Array:\n",
+    "        return jnp.deg2rad(jnp.array([self.gamma_max], dtype=dtype))\n",
+    "\n",
+    "def test_latin_hypercube_properties():\n",
+    "    # Setup\n",
+    "    M, D = 10, 3\n",
+    "    key = jax.random.PRNGKey(42)\n",
+    "    dtype = jnp.float32\n",
+    "\n",
+    "    # Execute\n",
+    "    result = _latin_hypercube_unit(key, M, D, dtype)\n",
+    "\n",
+    "    # 1. Check Shape\n",
+    "    assert result.shape == (M, D)\n",
+    "\n",
+    "    # 2. Check Range (should be within [0, 1])\n",
+    "    assert jnp.all(result >= 0) and jnp.all(result <= 1)\n",
+    "\n",
+    "    # 3. Check LHS Property:\n",
+    "    # If we multiply by M and floor the values, each column should\n",
+    "    # contain a permutation of integers 0 to M-1.\n",
+    "    bins = jnp.floor(result * M).astype(jnp.int32)\n",
+    "    for d in range(D):\n",
+    "        column_bins = bins[:, d]\n",
+    "        assert len(jnp.unique(column_bins)) == M, f\"Dimension {d} is missing bins!\"\n",
+    "\n",
+    "test_latin_hypercube_properties()\n",
+    "print(\"test passed\")"
+   ],
+   "id": "a51289944a445f93",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test passed\n"
+     ]
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-19T10:40:22.788392200Z",
+     "start_time": "2026-02-19T10:40:22.580875Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Parameters\n",
+    "T = 3 # Number of turbines (Dimensions)\n",
+    "M = 1  # Number of initial configurations to test (Samples)\n",
+    "yaw_min = jnp.deg2rad(0.0)   # Minimum yaw offset in degrees\n",
+    "yaw_max = jnp.deg2rad(25.0)  # Maximum yaw offset in degrees\n",
+    "\n",
+    "# 1. Generate the unit samples\n",
+    "key = jax.random.PRNGKey(0)\n",
+    "unit_samples = _latin_hypercube_unit(key, M, T, jnp.float32)\n",
+    "\n",
+    "yaw_configs = yaw_min + (yaw_max - yaw_min) * unit_samples"
+   ],
+   "id": "add518cc45ae1f5c",
+   "outputs": [],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-19T10:41:13.040621600Z",
+     "start_time": "2026-02-19T10:41:12.904781800Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(f\"Unit samples: {unit_samples}\")\n",
+    "print(f\"Yaw configs (radians): {yaw_configs}\")\n",
+    "print(f\"Yaw configs (degrees): {jnp.rad2deg(yaw_configs)}\")"
+   ],
+   "id": "6715dc0b32623b11",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unit samples: [[0.8423141  0.18237865 0.2271781 ]]\n",
+      "Yaw configs (radians): [[0.3675289  0.0795777  0.09912515]]\n",
+      "Yaw configs (degrees): [[21.057854   4.5594664  5.6794524]]\n"
+     ]
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-19T10:43:55.900406400Z",
+     "start_time": "2026-02-19T10:43:55.861517400Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def omega_from_gamma_sig(gamma: jax.Array,\n",
+    "                          gamma_max: jax.Array,\n",
+    "                          eps=1e-7) -> jax.Array:\n",
+    "    \"\"\"\n",
+    "    Map points in [gamma_min, gamma_max] to unconstrained omega via sigmoid function\n",
+    "    :param gamma: JAX array of physical yaw angles in radians\n",
+    "    :param gamma_max: maximum allowable physical yaw angle in radians\n",
+    "        \"\"\"\n",
+    "    p = gamma / gamma_max\n",
+    "    p = jnp.clip(p, eps, 1.0 - eps)  # avoid log(0) or log(1)\n",
+    "\n",
+    "    return jnp.log(p / (1.0 - p))\n",
+    "\n",
+    "omega_from_gamma_sig()"
+   ],
+   "id": "fef891e534d9a0c4",
+   "outputs": [],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-19T11:58:21.308309Z",
+     "start_time": "2026-02-19T11:58:21.296194Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def yaw_penalty_sq(gamma: jax.Array,\n",
+    "                   gamma_min: jax.Array,\n",
+    "                   gamma_max: jax.Array,\n",
+    "                   ) -> jax.Array:\n",
+    "    violation_min = jax.nn.softplus(gamma_min - gamma)\n",
+    "    print(violation_min)\n",
+    "    violation_max = jax.nn.softplus(gamma - gamma_max)\n",
+    "    print(violation_max)\n",
+    "\n",
+    "    return jnp.sum(violation_min + violation_max)\n",
+    "\n",
+    "def yaw_penalty_sq_v2(gamma: jax.Array,\n",
+    "                       gamma_min: jax.Array,\n",
+    "                       gamma_max: jax.Array) -> jax.Array:\n",
+    "\n",
+    "    beta_1, beta_2 = 45, 146\n",
+    "    alpha_1, alpha_2 = 9.8, 4\n",
+    "    # penalise yaw below gamma_min (should be positive if violated)\n",
+    "\n",
+    "    violation_min = (1.0 / beta_1) * jnp.log(1 + jnp.exp(beta_2 * (gamma_min - gamma)))\n",
+    "    print(violation_min)\n",
+    "    # penalise yaw above gamma_max (should be positive if violated)\n",
+    "    violation_max = (1.0 / alpha_1) * jnp.log(1 + jnp.exp(alpha_2 * (gamma_max - gamma)))\n",
+    "    print(violation_max)\n",
+    "\n",
+    "    return jnp.sum(violation_max + violation_min)\n",
+    "\n",
+    "def yaw_penalty_sq_v3(gamma: jax.Array,\n",
+    "                       gamma_min: jax.Array,\n",
+    "                       gamma_max: jax.Array) -> jax.Array:\n",
+    "    # penalise any absolute yaw value above 25 degrees\n",
+    "    yaw_diff = jnp.abs(gamma - gamma_max)"
+   ],
+   "id": "46f09cb7a6a9b9dc",
+   "outputs": [],
+   "execution_count": 45
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-19T11:58:21.857923100Z",
+     "start_time": "2026-02-19T11:58:21.773562Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "gamma = jnp.deg2rad(jnp.array([25.0, 19.0, 0.0]))\n",
+    "gamma_min = jnp.deg2rad(0.0)\n",
+    "gamma_max = jnp.deg2rad(25.0)\n",
+    "yaw_penalty_sq(gamma, gamma_min, gamma_max)"
+   ],
+   "id": "32432c8630478bf0",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4985928 0.5410242 0.6931472]\n",
+      "[0.6931472  0.64215744 0.4985928 ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Array(3.5666618, dtype=float32)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 46
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-19T11:58:22.615838900Z",
+     "start_time": "2026-02-19T11:58:22.576044200Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "gamma_max",
+   "id": "b7b3c20e8f3f5e4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(0.43633232, dtype=float32, weak_type=True)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 47
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-19T11:58:23.060614700Z",
+     "start_time": "2026-02-19T11:58:22.994353300Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "yaw_penalty_sq_v2(gamma, gamma_min, gamma_max)",
+   "id": "fd002333c0651ef5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.         0.01540327]\n",
+      "[0.07072931 0.09432252 0.19451493]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Array(0.37497002, dtype=float32)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 48
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-19T11:57:45.510526300Z",
+     "start_time": "2026-02-19T11:57:45.442180300Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "(1.0 / 9.8) * jnp.log(1 + jnp.exp(4 * (0.4363 - 0.1)))",
+   "id": "cc07e42fb906a8f5",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array(0.16088761, dtype=float32, weak_type=True)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 40
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def make_losses(state,\n",
+    "                runner,\n",
+    "                weights: jax.Array,\n",
+    "                penalty_weight: float,\n",
+    "                dtype):\n",
+    "\n",
+    "    pw = jnp.asarray(penalty_weight, dtype=dtype)\n",
+    "\n",
+    "    def loss_from_yaw(yaw_angles: jnp.ndarray):\n",
+    "        \"\"\"Physics-based objective: negative total farm power (weighted over wind cases).\"\"\"\n",
+    "        out = runner(yaw_angles)\n",
+    "        vel = average_velocity_jax(out.u_sorted)\n",
+    "        pow_mw = power(\n",
+    "            state.farm.power_thrust_table,\n",
+    "            vel,\n",
+    "            state.flow.air_density,\n",
+    "            yaw_angles=yaw_angles\n",
+    "        )\n",
+    "        case_power = jnp.sum(pow_mw, axis=1)\n",
+    "        return -jnp.sum(case_power * weights) / 1e6  # scalar in MW\n",
+    "\n",
+    "    def loss_from_omega(omega: jax.Array,\n",
+    "                        gamma_min: jax.Array,\n",
+    "                        gamma_max: jax.Array) -> jax.Array:\n",
+    "        gammas = gamma_from_omega_sig(omega, gamma_max)\n",
+    "        phys = loss_from_yaw(gammas)\n",
+    "        yaw = yaw_penalty_sq(gammas, gamma_min, gamma_max)\n",
+    "        # Power is in MW (~1-100), yaw penalty is in rad^2 (~0-1)\n",
+    "        # We need to scale penalty_weight accordingly.\n",
+    "        return phys + pw * yaw\n",
+    "\n",
+    "    return loss_from_yaw, loss_from_omega, pw"
+   ],
+   "id": "58023c68d66e1a65"
   }
  ],
  "metadata": {
