--- a/yaw_testing.ipynb
+++ b/yaw_testing.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-19T08:34:00.444610400Z",
-     "start_time": "2026-02-19T08:33:58.770106100Z"
+     "end_time": "2026-02-19T10:58:58.325623700Z",
+     "start_time": "2026-02-19T10:58:58.096095400Z"
     }
    },
    "source": [
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-19T08:34:03.394169300Z",
-     "start_time": "2026-02-19T08:34:00.447610800Z"
+     "end_time": "2026-02-19T10:59:03.175101600Z",
+     "start_time": "2026-02-19T10:58:58.327624700Z"
     }
    },
    "cell_type": "code",
@@ -68,33 +68,6 @@
    "execution_count": 2
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-19T08:40:05.744477200Z",
-     "start_time": "2026-02-19T08:40:05.547288300Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "x = jnp.deg2rad(25) - jnp.array([3, 6, 9])\n",
-    "x"
-   ],
-   "id": "9b404a3176a8493a",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array([-2.56366769, -5.56366769, -8.56366769], dtype=float64, weak_type=True)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 6
-  },
-  {
    "metadata": {},
    "cell_type": "markdown",
    "source": "## DiffWake yawed vs unyawed comparisons",
@@ -103,8 +76,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-19T01:01:20.508717300Z",
-     "start_time": "2026-02-19T01:01:19.196200700Z"
+     "end_time": "2026-02-19T11:33:29.957266300Z",
+     "start_time": "2026-02-19T11:33:28.821787900Z"
     }
    },
    "cell_type": "code",
@@ -169,12 +142,12 @@
     "#                                       air_density=hr1_state_unyawed.flow.air_density,\n",
     "#                                       yaw_angles=hr1_state_unyawed.farm.yaw_angles)\n",
     "\n",
-    "# unyawed_farm_power = jnp.sum(unyawed_turbine_powers)/1e6 # convert to megawatts\n",
+    "unyawed_farm_power = jnp.sum(unyawed_turbine_powers)/1e6 # convert to megawatts\n",
     "# unyawed_hr1_farm_power = jnp.sum(unyawed_hr1_turbine_powers)/1e6\n",
     "\n",
     "# # --- Case: Yawed Farm ---\n",
     "# y1, y2, y3 = 12.12434997, 20.76370488, 16.03151927\n",
-    "y1, y2, y3 = 25.0, 25.0, 0\n",
+    "y1, y2, y3 = 25.0, -20.0, 0.0\n",
     "yaw_angles_deg = jnp.array([[y1, y2, y3]], dtype=DTYPE) # Try steering wakes away from downstream turbines\n",
     "yaw_angles_rad = jnp.deg2rad(yaw_angles_deg)\n",
     "\n",
@@ -240,13 +213,13 @@
    ],
    "id": "116c16e5f490e8",
    "outputs": [],
-   "execution_count": 49
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-19T01:01:22.535117500Z",
-     "start_time": "2026-02-19T01:01:22.353440100Z"
+     "end_time": "2026-02-19T11:32:51.998143800Z",
+     "start_time": "2026-02-19T11:32:51.887630400Z"
     }
    },
    "cell_type": "code",
@@ -293,22 +266,90 @@
       "----- FLORIS results -----\n",
       "Baseline farm power: 4.836709 MW\n",
       "Turbine powers: [1972125.6058977128, 1663348.6365516074, 1201235.1647396581]\n",
-      "Yawed farm power: 5.271104 MW\n",
-      "Turbine powers: [1927223.0146313708, 1628265.7131767364, 1715614.7821898258]\n",
+      "Yawed farm power: 5.274442 MW\n",
+      "Turbine powers: [1927223.0146313708, 1691251.0737216133, 1655967.842678925]\n",
       "\n",
       "----- DiffWake results  -----\n",
       "Baseline farm power: 4.836627 MW\n",
       "Turbine powers: [1972125.6058977128, 1663348.6634779854, 1201152.8269721586]\n",
-      "Yawed farm power: 5.314598 MW\n",
-      "Turbine powers: [1927223.0146313705, 1605320.9014874906, 1782054.0244554975]\n",
+      "Yawed farm power: 5.344458 MW\n",
+      "Turbine powers: [1927223.0146313705, 1676215.0369346647, 1741019.6548874935]\n",
       "\n",
       "---------- Differences ----------\n",
       "Absolute baseline power difference (GCH) = 0.001702%\n",
-      "Absolute yawed power difference (GCH) = 0.818396%\n"
+      "Absolute yawed power difference (GCH) = 1.310063%\n"
      ]
     }
    ],
-   "execution_count": 50
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-19T11:33:41.736774400Z",
+     "start_time": "2026-02-19T11:33:41.611416400Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(f\"----- FLORIS results -----\")\n",
+    "print(f\"Baseline farm power: {floris_baseline_power[0]:.6f} MW\")\n",
+    "print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris[0]]}\" )\n",
+    "print(f\"Yawed farm power: {floris_yawed_power[0]:.6f} MW\")\n",
+    "print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris_yawed[0]]}\\n\" )\n",
+    "\n",
+    "\n",
+    "print(f\"----- DiffWake results  -----\")\n",
+    "print(f\"Baseline farm power: {unyawed_farm_power:.6f} MW\")\n",
+    "print(f\"Turbine powers: {[i.item() for i in unyawed_turbine_powers[0]]}\" )\n",
+    "print(f\"Yawed farm power: {yawed_farm_power:.6f} MW\")\n",
+    "print(f\"Turbine powers: {[i.item() for i in yawed_turbine_powers[0]]}\\n\" )\n",
+    "\n",
+    "print(\"---------- Differences ----------\")\n",
+    "print(f\"Absolute baseline power difference (GCH) = {absolute_percentage_difference(floris_baseline_power, unyawed_farm_power)[0]:.6f}%\")\n",
+    "print(f\"Absolute yawed power difference (GCH) = {absolute_percentage_difference(floris_yawed_power, yawed_farm_power)[0]:.6f}%\")\n",
+    "# print(\"=\"*100)\n",
+    "# print(f\"----- FLORIS results (Horns Rev 1)-----\")\n",
+    "# print(f\"Baseline farm power: {hr1_floris_baseline_power[0]:.6f} MW\")\n",
+    "# # print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris[0]]}\" )\n",
+    "# print(f\"Yawed farm power: {hr1_floris_yawed_power[0]:.6f} MW\\n\")\n",
+    "# # print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris_yawed[0]]}\\n\" )\n",
+    "#\n",
+    "# print(f\"----- DiffWake results (Horns Rev 1) -----\")\n",
+    "# print(f\"Baseline farm power: {unyawed_hr1_farm_power:.6f} MW\")\n",
+    "# # print(f\"Turbine powers: {[i.item() for i in unyawed_turbine_powers[0]]}\" )\n",
+    "# print(f\"Yawed farm power: {yawed_hr1_farm_power:.6f} MW\")\n",
+    "# # print(f\"Turbine powers: {[i.item() for i in yawed_turbine_powers[0]]}\" )\n",
+    "# print(\"\\n---------- Differences ----------\")\n",
+    "# print(f\"Absolute baseline power difference ({wake_model}) = {absolute_percentage_difference(hr1_floris_baseline_power, unyawed_hr1_farm_power)[0]:.6f}%\")\n",
+    "# print(f\"Absolute yawed power difference ({wake_model}) = {absolute_percentage_difference(hr1_floris_yawed_power, yawed_hr1_farm_power)[0]:.6f}%\")\n",
+    "\n"
+   ],
+   "id": "d016ba50a65e7ca1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- FLORIS results -----\n",
+      "Baseline farm power: 4.836709 MW\n",
+      "Turbine powers: [1972125.6058977128, 1663348.6365516074, 1201235.1647396581]\n",
+      "Yawed farm power: 5.036265 MW\n",
+      "Turbine powers: [1927223.0146313708, 1691251.0737216133, 1417790.6838095644]\n",
+      "\n",
+      "----- DiffWake results  -----\n",
+      "Baseline farm power: 4.836627 MW\n",
+      "Turbine powers: [1972125.6058977128, 1663348.6634779854, 1201152.8269721586]\n",
+      "Yawed farm power: 5.040140 MW\n",
+      "Turbine powers: [1927223.0146313705, 1676215.0369346647, 1436701.8586788638]\n",
+      "\n",
+      "---------- Differences ----------\n",
+      "Absolute baseline power difference (GCH) = 0.001702%\n",
+      "Absolute yawed power difference (GCH) = 0.076886%\n"
+     ]
+    }
+   ],
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -316,7 +357,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "d016ba50a65e7ca1"
+   "id": "d8e30910d5782af5"
   }
  ],
  "metadata": {
